creando el header y sección 1

--- a/index.html
+++ b/index.html
@@ -7,18 +7,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@300;500;700;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@300;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Web Site - Audifonos</title>
 </head>
 
 <body>
-    <h1>Hello Wolrd</h1>
-    <div class="contenedor">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed aliquam repellendus voluptatem, tenetur fugit
-            exercitationem aut cum earum sunt obcaecati.</p>
-    </div>
+    <header>
+        <div class="contenedor contenido-header">
+            <div class="imagen-header">
+                <img src="./img/header.webp" alt="" width="500px">
+            </div>
+            <div class="texto-header">
+                <p class="tagline-producto">Sonido Profesional</p>
+                <h1 class="nombre-producto degradado-verde">Tech PRO</h1>
+                <p class="descripcion-producto">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam veniam fuga debitis, ut commodi
+                    itaque dicta modi eos corporis quos saepe labore aliquam id! Doloribus error corrupti eum
+                    accusantium ut?
+                </p>
+                <p class="precio-producto">Desde: <span>$299</span></p>
+            </div>
+        </div>
+    </header>
+
+    <section class="contenedor icono">
+        <div class="icono-hijo">
+            <img src="./img/icono-sonido.svg" alt="bateria" width="50px">
+            <h3>SONIDO</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem numquam aliquam error ipsa nam
+                eveniet nemo stus?</p>
+        </div>
+        <div class="icono-hijo">
+            <img src="./img/icono-garantia.svg" alt="bateria" width="50px">
+            <h3>GARANTIA</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem numquam aliquam error ipsa nam
+                eveniet nemo stus?</p>
+        </div>
+        <div class="icono-hijo">
+            <img src="./img/icono-bateria.svg" alt="bateria" width="50px">
+            <h3>BATERIA </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem numquam aliquam error ipsa nam
+                eveniet nemo stus?</p>
+        </div>
+    </section>
 </body>
 
 </html>
